force-app/main/default/objects/APAC_Region__c/APAC_Region__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>APAC Region</label>
</CustomObject>