force-app/main/default/objects/APAC_Region__c/fields/Billing_Countries__c.field-meta.xml
<CustomField>
    <fullName>Billing_Countries__c</fullName>
    <label>Billing Countries I</label>
    <length>255</length>
    <type>Text</type>
</CustomField>