force-app/main/default/objects/APAC_Region__c/fields/Billing_Countries_II__c.field-meta.xml
<CustomField>
    <fullName>Billing_Countries_II__c</fullName>
    <label>Billing Countries II</label>
    <length>255</length>
    <type>Text</type>
</CustomField>